# pza-dev-picoha-dio

./: .gitignore  Cargo.toml  README.md  build.rs
cargo-generate/: config.toml
firmware/: Cargo.toml  README.md
firmware/.cargo/: config.toml
firmware/cargo-generate/: config.toml
firmware/src/: api_dio.proto  api_dio.rs  api_dio_pb2.py  api_dio_utils.rs  dio_request_buffer.rs  dio_request_processor.rs  main.rs  uart_debug.rs
src/: api.proto  api_dio.proto  api_dio.rs  api_dio_utils.rs  app_dio.rs  dio_request_buffer.rs  dio_request_processor.rs  main.rs  uart_debug.rs
test/cucumber/: Cargo.toml
test/cucumber/features/: 0-usb_interface.robot  control_pins.feature  ping.feature  robustness.feature
test/cucumber/tests/: control_pins.rs  example.rs  ping.rs  robustness.rs  set_pins.rs
test/cucumber/tests/connectors/serial/: settings.rs
test/cucumber/tests/connectors/usb/: settings.rs
test/cucumber/tests/libs/: global_keywords.rs  mod.rs  world.rs
test/cucumber/tests/libs/connectors/: mod.rs
test/cucumber/tests/libs/connectors/serial/: settings.rs
test/cucumber/tests/libs/connectors/usb/: settings.rs
test/robot/: .gitignore  README.md  requirements.txt
test/robot/libraries/: API_PicoHostAdapterDio.py  gpio_keywords.py
test/robot/platform/RaberryPico/: platform.resource  platform_data.py
test/robot/platform/RaspberryPico/: platform.resource  platform_data.py
test/robot/tests/: Test_Suite_GPIO.robot
tests/pcb_pico_dio_tester/: pico_dio_tester.kicad_pcb  pico_dio_tester.kicad_prl  pico_dio_tester.kicad_pro  pico_dio_tester.kicad_sch
tests/robot/: README.md  requirements.txt
tests/robot/libraries/: api_dio_pb2.py  serial_keywords.py  usb_keywords.py
tests/robot/picoha-dio/: 1-basic_functions.robot  2-robustness.robot
tests/robot/platform/local/: platform.resource
