[package]
edition = "2021"
name = "tests"
version = "0.0.0"
license = "MIT OR Apache-2.0"


[[test]]
name = "ping"
harness = false

[[test]]
name = "control_pins"
harness = false       # allows Cucumber to print output instead of libtest

[[test]]
name = "robustness"
harness = false     # allows Cucumber to print output instead of libtest


[dev-dependencies]

# Main async framework for the platform
tokio = { version = "1", features = ["full", "tracing"] }
tokio-serial = "5.4.1"
# tokio-serial = { git = "https://github.com/berkowski/tokio-serial", branch = "master" }

rand = "0.8"
cucumber = { version = "0.21.1", features = ["tracing", "timestamps"] }
futures = "0.3"

prost-build = { version = "0.12" }
prost = "0.12"
# Only necessary if using Protobuf well-known types:
prost-types = "0.12"

serial-line-ip = { git = "https://github.com/Panduza/serial-line-ip-rs", branch = "stream_buffer_feature" }

tracing = "0.1.26"
tracing-subscriber = "0.3.18"
